<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:weightSum="7"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="bottom|end"
        android:text="123"
        android:textColor="@color/white"
        android:textSize="100sp"
        tools:ignore="HardcodedText">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/c"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnPm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="+/-"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="HardcodedText,NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnPer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="%"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="HardcodedText,NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background2"
            android:gravity="center"
            android:text="@string/_Div"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnMul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background2"
            android:gravity="center"
            android:text="@string/_Mult"
            android:textColor="@color/white"
            android:textSize="50sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background2"
            android:gravity="center"
            android:text="@string/_Plus"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background2"
            android:gravity="center"
            android:text="@string/_Minus"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.02"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/_Dot"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@drawable/button_background2"
            android:gravity="center"
            android:text="@string/_Equal"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:ignore="NestedWeights,VisualLintButtonSize"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>
</LinearLayout>